[gd_scene load_steps=8 format=3 uid="uid://w6ornk46pr7b"]

[ext_resource type="Shader" path="res://scenes/ui scenes/pause menu/pause_menu.gdshader" id="1_8nvtu"]
[ext_resource type="Script" path="res://scenes/ui scenes/pause menu/pause_menu.gd" id="1_cwv66"]
[ext_resource type="AudioStream" uid="uid://cfbvibujdsmi1" path="res://assets/sounds/ui/main menu/hoverSFX.ogg" id="3_r0q0j"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mntfi"]
shader = ExtResource("1_8nvtu")
shader_parameter/lod = 0.0

[sub_resource type="Animation" id="Animation_ubgno"]
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_u717h"]
resource_name = "blur and fade"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.8]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rufxp"]
_data = {
"RESET": SubResource("Animation_ubgno"),
"blur and fade": SubResource("Animation_u717h")
}

[node name="Pause Menu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cwv66")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_mntfi")
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -2500.0
offset_top = -2500.0
offset_right = 2500.0
offset_bottom = 2500.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -256.0
offset_right = 256.0
offset_bottom = 256.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 75
alignment = 1

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
tooltip_text = "Resume the game"
theme_override_font_sizes/font_size = 50
text = "Resume"

[node name="Restart" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
tooltip_text = "Restart the level/battle"
theme_override_font_sizes/font_size = 50
text = "Restart"

[node name="Main Menu" type="Button" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
tooltip_text = "Return to Main Menu"
theme_override_font_sizes/font_size = 50
text = "Main Menu"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rufxp")
}

[node name="hoverSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_r0q0j")

[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/Resume" to="." method="hovered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/Restart" to="." method="hovered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/Main Menu" to="." method="hovered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Main Menu" to="." method="_on_main_menu_pressed"]
